<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <EditText
                    android:id="@+id/name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingLeft="8dp"
                    android:layout_marginLeft="12dp"
                    android:hint="@string/enter_your_name"
                    android:inputType="textMultiLine"/>


            <TextView
                    style="@style/TittleTextView"
                    android:text="@string/toppings"
                    android:textAllCaps="true"/>

            <CheckBox
                    android:id="@+id/whipped_cream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="20dp"
                    android:text="@string/whipped_cream"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:textAppearance="?android:textAppearanceMedium"/>
            <CheckBox
                    android:id="@+id/chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:paddingLeft="20dp"
                    android:text="@string/chocolate"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                    style="@style/TittleTextView"
                    android:text="@string/quantity"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <Button
                        android:id="@+id/button_minus"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/minus"
                        android:onClick="decrement"
                />

                <TextView
                        android:id="@+id/quantity_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="8dp"
                        android:text="@string/two"
                        android:textColor="@android:color/black"
                />

                <Button
                        android:id="@+id/button_plus"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/plus"
                        android:onClick="increment"/>

            </LinearLayout>

            <TextView
                    style="@style/TittleTextView"
                    android:text="@string/order_summary"/>

            <TextView
                    android:id="@+id/order_summary_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10"
                    android:textSize="16sp"
                    android:paddingLeft="16dp"
                    android:textColor="@android:color/black">
            </TextView>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:textSize="16sp"
                    android:onClick="submitOrder"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_email"
                    android:textSize="12sp"
                    android:onClick="composeEmail"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>